--- a/To Do/Views/Base.lproj/Main.storyboard
+++ b/To Do/Views/Base.lproj/Main.storyboard
@@ -10,6 +10,45 @@
     </dependencies>
     <scenes>
         <!--Todo-->
+        <scene sceneID="oK2-if-VLD">
+            <objects>
+                <tableViewController id="7kk-yo-bdm" customClass="CategoryTableViewController" customModule="To_Do" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XAE-B7-Rah">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="pvX-XZ-X78">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pvX-XZ-X78" id="d7J-Bi-vOx">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7kk-yo-bdm" id="Cog-Fm-nFs"/>
+                            <outlet property="delegate" destination="7kk-yo-bdm" id="pJo-Ez-Qrw"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todo" id="PRu-yw-uFx">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8th-b0-E9d">
+                            <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="7kk-yo-bdm" id="ftd-Bq-B7o"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="3Xu-qo-qdZ" kind="show" identifier="goToItems" id="Hb0-Qi-4I4"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wft-OQ-l9K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1204" y="-216"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="CdZ-2H-CM7">
             <objects>
                 <tableViewController id="3Xu-qo-qdZ" customClass="TodoListViewController" customModule="To_Do" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,9 +56,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="7wq-oE-fKN">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="3Xu-qo-qdZ" id="ln6-s6-KRk"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoItemCell" rowHeight="37" id="pjO-s0-9ci">
-                                <rect key="frame" x="0.0" y="28" width="375" height="37"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="37"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pjO-s0-9ci" id="Yel-Al-Lzk">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="36.5"/>
@@ -32,7 +79,7 @@
                             <outlet property="delegate" destination="3Xu-qo-qdZ" id="Y4N-3d-cfF"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todo" id="ewe-Kc-SlD">
+                    <navigationItem key="navigationItem" title="Items" id="ewe-Kc-SlD">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="prz-Sk-Fx6">
                             <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
@@ -43,7 +90,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZk-53-Ggy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1212" y="-217.24137931034485"/>
+            <point key="canvasLocation" x="1922" y="-217"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d9q-HX-x7i">
@@ -61,7 +108,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="3Xu-qo-qdZ" kind="relationship" relationship="rootViewController" id="uWS-jQ-tZo"/>
+                        <segue destination="7kk-yo-bdm" kind="relationship" relationship="rootViewController" id="Ugf-Mg-ERF"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n2W-G7-fEM" userLabel="First Responder" sceneMemberID="firstResponder"/>
